crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@97.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '4714-11-23 23:59:59 BC'::timestamp;"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    TypeCast@7..42
      AConst@7..31
        Sconst@7..31 "'4714-11-23 23:59:59 BC'"
      Typecast@31..33 "::"
      TypeName@33..42
        Timestamp@33..42 "timestamp"
  Ascii59@42..43 ";"

